# MD

./: .augment.json  .gitignore  DATA_FLOW.md  DECISION_LOG.md  Feature_Implementation_Documentation.md  MASTER_CHECKLIST.md  Merged_Implementation_Plan.md  PLATFORM_STRUCTURE.md  PROJECT_STATUS.md  Project_Summary_Report.md  README.md  SERVICE_TEMPLATE_APPLICATION_SUMMARY.md  SERVICE_TEMPLATE_DEPLOYMENT_REPORT.md  SERVICE_TEMPLATE_FINAL_REPORT.md  SERVICE_TEMPLATE_MIGRATION_FINAL_REPORT.md  SERVICE_TEMPLATE_MONITORING_REPORT.md  adapter_analysis.md  apply_resilience_patterns.py  apply_standardized_cache_management.py  apply_standardized_configuration.py  apply_standardized_monitoring.py  apply_standardized_performance_monitoring.py  architecture-report.md  architecture_analysis_report.json  benchmark_runner.py  caching_updates.txt  check_config_files.py  check_files.py  check_mcp_processes.py  check_monitoring_implementation.py  check_naming.py  check_project_quality.py  check_syntax.py  check_syntax_targeted.py  check_tech_issues.py  commit_message.txt  custom_error_handling.json  dependency_fixes_summary.md  direct_service_calls.json  docker-compose.yml  (+65 more)
analysis-engine-service/: .env  .env.example  .env.test  API_DOCS.md  ARCHITECTURE.md  Dockerfile  Dockerfile.test  PROJECT_STATUS.md  README.md  SERVICE_CHECKLIST.md  api_standardization_report.json  client_migration_report.json  deprecation_config.json  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test-requirements.txt  test_async_patterns.py  test_config.py
analysis-engine-service/adapters/: adapter_factory.py  adapter_factory_1.py  adaptive_integration.py  adaptive_layer_client.py  analysis_engine_adapter_factory.py  analysisprovideradapter.py  api_test_client.py  asset_adapter.py  backtesting_client.py  causal_data_connector.py  causal_strategy_enhancer_adapter.py  client_factory.py  common_adapter_factory.py  correlation_analysis_client.py  data_adapters.py  enhanced_tool_effectiveness_adapter.py  execution_engine_client.py  feature_store_adapter.py  feedback_client.py  indicator_adapter.py  indicator_adapter_1.py  indicatorprovideradapter.py  indicators.py  logging.py  manipulation_detection_client.py  market_regime_aware_adapter.py  market_regime_client.py  metrics_integration.py  ml_adapters.py  ml_integration_adapter.py  ml_integration_service_adapter.py  ml_workbench_service_adapter.py  pattern_adapter.py  patternrecognizeradapter.py  test_client.py  test_core_integration.py  test_optimized_components_integration.py  test_strategy_enhancement_integration.py  tool_effectiveness_adapter.py  trading_adapters.py  (+1 more)
analysis-engine-service/analysis_engine/: database.py  service_clients.py
analysis-engine-service/api/: __init__.py  analysis_results_api.py  api_endpoints.py  api_standardization_validator.py  causal_visualization_api.py  error_middleware.py  feedback_endpoints.py  monitoring.py  routes_1.py  routes_2.py  test_standardized_endpoints.py  tracing.py
analysis-engine-service/common_lib/: __init__.py  exceptions.py
common-lib/: README.md  __init__.py  correlation.py  exceptions.py  pyproject.toml  run_tests.py  test_resilience.bat  test_resilience.ps1
core-foundations/: Makefile  pyproject.toml
data-pipeline-service/: .env  .env.example  Dockerfile  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  Makefile  POETRY_SETUP.md  README.md  SCHEMA_MANAGEMENT.md  SERVICE_ANALYSIS.md  SERVICE_CHECKLIST.md  TIMESERIES_TESTS.md  cleanup_service.ps1  docker-compose.yml  install_dependencies.ps1  pyproject.toml  pytest.ini  requirements.txt  run_direct_test.py  run_tests.bat  run_tests.ps1  run_ts_tests.bat  self_contained_test.py
e2e/: .env.example  README.md  SERVICE_CHECKLIST.md  pyproject.toml
feature-store-service/: .coverage  .env  .env.example  Dockerfile  Makefile  README.md  SERVICE_CHECKLIST.md  docker-compose.yml  mock_service.py  pyproject.toml  run_fibonacci_tests.py  simple_fibonacci_test.py  start.py  test_fibonacci_adapters.py  test_simple.py
ml-integration-service/: .env  .env.example  Dockerfile  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  README.md  SERVICE_CHECKLIST.md  docker-compose.yml  mock_service.py  pyproject.toml
ml-workbench-service/: .env  .env.example  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SERVICE_CHECKLIST.md  SERVICE_TEMPLATE_MIGRATION_PLAN.md  SERVICE_TEMPLATE_MIGRATION_SUMMARY.md  deploy_service.py  docker-compose.yml  main.py  metrics.py  pyproject.toml  requirements.txt  test_service.py
monitoring-alerting-service/: .env  .env.example  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  SERVICE_CHECKLIST.md  SERVICE_TEMPLATE_MIGRATION_PLAN.md  SERVICE_TEMPLATE_MIGRATION_SUMMARY.md  deploy_service.py  docker-compose-elk.yml  docker-compose.yml  pyproject.toml  test_service.py  tracing.py
optimization/: .env.example  README.md  SERVICE_CHECKLIST.md  pyproject.toml  resource_allocator.py
portfolio-management-service/: .env  .env.example  Dockerfile  README.md  SERVICE_CHECKLIST.md  docker-compose.yml  health_check.py  pyproject.toml  start.py
risk-management-service/: .env.example  API_DOCS.md  Dockerfile  README.md  SERVICE_CHECKLIST.md  docker-compose.yml  mock_service.py  pyproject.toml
security/: .env.example  README.md  SERVICE_CHECKLIST.md  pyproject.toml
strategy-execution-engine/: .env  .env.dev  .env.example  Dockerfile  PROJECT_STATUS.md  README.md  README_FEATURE_STORE.md  SERVICE_CHECKLIST.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_feature_store_dashboard.py  run_feature_store_monitoring.py
trading-gateway-service/: .env  .env.example  .pylintrc  CLEANUP.md  Dockerfile  ERROR_HANDLING.md  IMPROVEMENTS.md  README.md  SERVICE_CHECKLIST.md  docker-compose.yml  health_check.py  mock_service.py  package-lock.json  package.json  pyproject.toml  start.py  update_datetime.py
ui-service/: .env  .env.example  Dockerfile  Dockerfile.simple  README.md  SERVICE_CHECKLIST.md  docker-compose.yml  next.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
(+4461 files in other folders)
