[project]
name = "analysis-engine-service"
version = "0.1.0"
description = "Analysis Engine Service for Forex Trading Platform"
authors = [
    {name = "Forex Team"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "fastapi>=0.115.12,<0.116.0",
    "uvicorn>=0.34.2,<0.35.0",
    "httpx>=0.28.1,<0.29.0",
    "pandas>=1.3.0,<2.0.0",
    "numpy~=1.26.0", # Trying 1.26.x to resolve build issues
    "scikit-learn>=1.0.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0",
    "statsmodels>=0.13.0,<1.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "asyncio>=3.4.3,<4.0.0",
    "lingam>=1.5.1,<2.0.0",
    # torch will be installed via pip separately
    "graphviz>=0.20.0,<1.0.0", # Dependency for lingam
    "networkx>=3.0,<4.0", # Dependency for lingam
    "semopy>=2.3.0,<3.0.0", # Dependency for lingam
    "kafka-python>=2.0.2,<3.0.0" # For event publishing
]

[tool.poetry.dependencies]
common-lib = {path = "../common-lib", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1"
pytest-cov = ">=4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
