[tool.poetry]
name = "common-lib"
version = "0.1.0"
description = "Common utilities shared across forex trading platform services"
authors = ["FX Trading <python@example.com>"]
readme = "README.md"
packages = [{include = "common_lib"}]

[tool.poetry.dependencies]
python = "^3.10"
core-foundations = {path = "../core-foundations", develop = true} # Added core-foundations dependency
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
# Database dependencies (optional)
sqlalchemy = {version = "^2.0.0", optional = true}
asyncpg = {version = "^0.27.0", optional = true}
# FastAPI is optional, module works without it
fastapi = {version = "^0.100.0", optional = true}

[tool.poetry.extras]
web = ["fastapi"]
database = ["sqlalchemy", "asyncpg"]
all = ["fastapi", "sqlalchemy", "asyncpg"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
