[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "data_pipeline_service"
version = "0.1.0"
description = "Data Pipeline Service for Forex Trading Platform"
authors = ["Forex Trading Platform Team <team@forexplatform.example>"]
readme = "README.md"
license = "Proprietary"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = ">=0.95.0,<1.0.0"
uvicorn = ">=0.21.0,<1.0.0"
pydantic = ">=2.0.0,<3.0.0"
pandas = ">=2.0.0,<3.0.0"
numpy = ">=1.22.0,<2.0.0"
pytz = ">=2023.3"
aiohttp = ">=3.8.0,<4.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
tenacity = ">=8.2.0,<9.0.0"
redis = ">=4.5.0,<5.0.0"
prometheus-client = ">=0.16.0,<1.0.0"
sqlalchemy = ">=2.0.0"
core-foundations = {path = "../core-foundations"}
common-lib = {path = "../common-lib", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.21.0"
black = ">=23.3.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.3.0"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=data_pipeline_service"