[tool.poetry]
name = "forex-e2e-tests"
version = "0.1.0"
description = "End-to-End Testing Framework for Forex Trading Platform"
authors = ["Forex Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pytest = ">=7.0.0"
pytest-asyncio = ">=0.18.0"
pytest-xdist = ">=2.5.0"
pytest-timeout = ">=2.1.0"
httpx = ">=0.24.0"
pydantic = ">=2.0.0"
pandas = ">=1.3.0"
numpy = ">=1.20.0"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests"
]
testpaths = ["tests"]
timeout = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
