[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feature_store_service"
version = "0.1.0"
description = "Feature Store Service for Forex Trading Platform"
authors = [
    {name = "Forex Trading Platform Team", email = "team@forexplatform.example"}
]
readme = "README.md"
requires-python = ">=3.8,<3.11"
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "fastapi>=0.95.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "uvicorn>=0.21.1,<0.22.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.22.0,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.5,<3.0.0",
    "ta>=0.10.0,<0.11.0",
    "pyyaml>=6.0,<7.0",
    "httpx>=0.24.0,<0.25.0",
    "core-foundations @ file:///${PROJECT_ROOT}/core-foundations",
    "common-lib @ file:///${PROJECT_ROOT}/common-lib[database]", # Added common-lib with database extras
    "typing-extensions>=4.5.0",
    "python-json-logger>=2.0.0",
    "scipy>=1.8.0,<2.0.0" # Added for statistical indicators
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.3.0",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
    "reliability: mark test as a reliability system test"
]