[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_integration_service"
version = "0.1.0"
description = "Machine Learning Integration Service for Strategy Optimization"
readme = "README.md"
authors = [
    {name = "Forex Trading Platform Team"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pydantic>=1.8.0",
    "httpx>=0.18.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=0.24.0",
    "mlflow>=1.20.0",
    "joblib>=1.0.0",
    "aiologger>=0.6.0",
    "asyncio>=3.4.3",
    "aiohttp>=3.7.4",
    "pytz>=2021.1",
    "common-lib @ file:///${PROJECT_ROOT}/common-lib[web]",  # Added common-lib with web extras
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
    "pytest-asyncio>=0.15.0",
    "black>=21.5b2",
    "isort>=5.9.0",
    "mypy>=0.812",
    "flake8>=3.9.0",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
