[tool.poetry]
name = "monitoring-alerting-service"
version = "0.1.0"
description = "Monitoring and Alerting Service for Forex Trading Platform"
authors = ["Forex Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
prometheus-client = ">=0.16.0"
pyyaml = ">=6.0.0"
fastapi = ">=0.115.0"
uvicorn = ">=0.24.0"
httpx = ">=0.24.0"
pydantic = ">=2.0.0"
pandas = ">=1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1"
pytest-cov = ">=4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
