[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "security-service"
version = "0.1.0"
description = "Security components for Forex Trading Platform"
authors = ["Forex Team <team@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyjwt = "^2.6.0"
cryptography = "^40.0.0"
fastapi = "^0.95.0"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1"
pytest-cov = ">=4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88
