[tool.poetry]
name = "strategy-execution-engine"
version = "0.1.0"
description = "Strategy Execution Engine for Forex Trading Platform"
authors = ["Forex Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = ">=1.3.0,<2.0.0"
numpy = ">=1.20.0,<2.0.0"
httpx = ">=0.24.0,<1.0.0"
common-lib = {path = "../common-lib", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
