[tool.poetry]
name = "ui-service-python-components"
version = "0.1.0"
description = "Python components for UI Service in Forex Trading Platform"
authors = ["Forex Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pandas = ">=1.3.0"
numpy = ">=1.20.0"
matplotlib = ">=3.4.0"
seaborn = ">=0.11.0"
fastapi = ">=0.115.0"
uvicorn = ">=0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1"
pytest-cov = ">=4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
